--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Bootstrap 101 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
-  <body>
+    <link href="css/style.css" rel="stylesheet" media="screen">
+</head>
+
+<body>
     <h1>Hello, world!</h1>
+    <div>입학 환영사 , 학사가이드, 슬기로운 제주 생활, 캠퍼스 안내, 서비스 바로가기</div>
+    <div>동영상1</div>
+    <div>공지사항</div>
+    <div>
+        <div class="row-fluid">
+            <div class="span4">동영상</div>
+            <div class="span4">동영상</div>
+            <div class="span4">동영상</div>
+        </div>
+        <div class="row-fluid">
+            <div class="span4">링크</div>
+            <div class="span4">링크</div>
+            <div class="span4">링크</div>
+        </div>
+    </div>
+    <div>
+        <div class="row-fluid">
+            <div class="span4">링크</div>
+            <div class="span4">링크</div>
+            <div class="span4">링크</div>
+        </div>
+        <div class="row-fluid">
+            <div class="span4">링크</div>
+            <div class="span4">링크</div>
+            <div class="span4">링크</div>
+        </div>
+    </div>
+    <div>
+        <div class="row-fluid">
+            <div class="span6">동영상</div>
+            <div class="span6">동영상</div>
+        </div>
+    </div>
+    <div>링크</div>
+    <div>
+        <div class="row-fluid">
+            <div class="span3">링크</div>
+            <div class="span3">링크</div>
+            <div class="span3">링크</div>
+            <div class="span3">링크</div>
+        </div>
+        <div class="row-fluid">
+            <div class="span3">링크</div>
+            <div class="span3">링크</div>
+            <div class="span3">링크</div>
+            <div class="span3">링크</div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
