--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -13,7 +13,19 @@
     <h1>Hello, world!</h1>
     <div>입학 환영사 , 학사가이드, 슬기로운 제주 생활, 캠퍼스 안내, 서비스 바로가기</div>
     <div>동영상1</div>
-    <div>공지사항</div>
+    <div>
+        <div class="row-fluid">
+            <div class="span4 notice">공지사항</div>
+            <div class="span4">등교 대면 수업 개시 안내
+                05.06.(수) : 사전에 승인된 실험·실습·실기
+                교과목부터 단계적 시행
+                05.18.(월) : 질병관리본부 방역 지침을 준수하여
+                운영할 수 있는 전체 교과목
+                ※ 세부내용은 각 학과(전공)를 통해 별도 안내
+            </div>
+            <div class="span4"></div>
+        </div>
+    </div>
     <div>
         <div class="row-fluid">
             <div class="span4">동영상</div>
@@ -26,16 +38,46 @@
             <div class="span4">링크</div>
         </div>
     </div>
-    <div>
+    <div>슬기로운 서원생활<br>서원대 캠퍼스 생활을 더욱 알차게!
         <div class="row-fluid">
-            <div class="span4">링크</div>
-            <div class="span4">링크</div>
-            <div class="span4">링크</div>
+            <div class="span4">
+                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                    target="blank">
+                    <img src="img/limg-life1.jpg" class="img-rounded">
+                </a>
+            </div>
+            <div class="span4">
+                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                    target="blank">
+                    <img src="img/limg-life1.jpg" class="img-rounded">
+                </a>
+            </div>
+            <div class="span4">
+                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                    target="blank">
+                    <img src="img/limg-life1.jpg" class="img-rounded">
+                </a>
+            </div>
         </div>
         <div class="row-fluid">
-            <div class="span4">링크</div>
-            <div class="span4">링크</div>
-            <div class="span4">링크</div>
+            <div class="span4">
+                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                    target="blank">
+                    <img src="img/limg-life1.jpg" class="img-rounded">
+                </a>
+            </div>
+            <div class="span4">
+                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                    target="blank">
+                    <img src="img/limg-life1.jpg" class="img-rounded">
+                </a>
+            </div>
+            <div class="span4">
+                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                    target="blank">
+                    <img src="img/limg-life1.jpg" class="img-rounded">
+                </a>
+            </div>
         </div>
     </div>
     <div>
@@ -44,9 +86,23 @@
             <div class="span6">동영상</div>
         </div>
     </div>
-    <div>링크</div>
     <div>
+        신학기 온라인 이벤트<br>
+        자세한 내용은 우리대학 페이스북에서 확인하세요!
+
         <div class="row-fluid">
+            <div class="span4"></div>
+            <div class="span4">
+                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                    target="blank">
+                    <img src="img/bottomImg.jpg" class="img-rounded">
+                </a>
+            </div>
+            <div class="span4"></div>
+        </div>
+    </div>
+    <div>
+        <!-- <div class="row-fluid">
             <div class="span3">링크</div>
             <div class="span3">링크</div>
             <div class="span3">링크</div>
@@ -57,6 +113,21 @@
             <div class="span3">링크</div>
             <div class="span3">링크</div>
             <div class="span3">링크</div>
+        </div> -->
+        <div class="btn-group">
+            <button class="btn">Left</button>
+            <button class="btn">Middle</button>
+            <button class="btn">Right</button>
+            <button class="btn">Right</button>
+        </div>
+    </div>
+    <div>
+       
+        <div class="btn-group">
+            <button class="btn">Left</button>
+            <button class="btn">Middle</button>
+            <button class="btn">Right</button>
+            <button class="btn">Right</button>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery.js"></script>
