--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -11,8 +11,17 @@
 
 <body>
     <h1>Hello, world!</h1>
-    <div>입학 환영사 , 학사가이드, 슬기로운 제주 생활, 캠퍼스 안내, 서비스 바로가기</div>
-    <div>동영상1</div>
+    <nav class="navbar">
+      <ul class="navbar__menu">
+        <li><a href="">입학 환영사</a></li>
+        <li><a href="">학사 가이드</a></li>
+        <li><a href="">슬기로운 제주생활</a></li>
+        <li><a href="">캠퍼스 안내</a></li>
+        <li><a href="">서비스 바로가기</a></li>
+      </ul>
+    </nav>
+    <div id='welcome'>
+    </div>
     <div>공지사항</div>
     <div>
         <div class="row-fluid">
