--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -11,21 +11,34 @@
 
 <body>
     <h1>Hello, world!</h1>
-    
+
     <nav class="navbar">
-      <ul class="navbar__menu">
-        <li><a href="">입학 환영사</a></li>
-        <li><a href="">학사 가이드</a></li>
-        <li><a href="">슬기로운 제주생활</a></li>
-        <li><a href="">캠퍼스 안내</a></li>
-        <li><a href="">서비스 바로가기</a></li>
-      </ul>
+        <ul class="navbar__menu">
+            <li><a href="">입학 환영사</a></li>
+            <li><a href="">학사 가이드</a></li>
+            <li><a href="">슬기로운 제주생활</a></li>
+            <li><a href="">캠퍼스 안내</a></li>
+            <li><a href="">서비스 바로가기</a></li>
+        </ul>
     </nav>
     <div id='welcome'>
-      <span>입학을 환영합니다.</span>
-      <div class="video_content">
+        입학을 환영합니다.
+        <div class="row-fluid">
+            <div class="span4"></div>
+            <div class="span4">
+                <div class=" video_content">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="span4"></div>
+        </div>
+    </div>
+
+    <!-- <div class="video_content">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+      </div> -->
     </div>
     <div>공지사항</div>
     <div>입학 환영사 , 학사가이드, 슬기로운 제주 생활, 캠퍼스 안내, 서비스 바로가기</div>
@@ -140,7 +153,7 @@
         </div>
     </div>
     <div>
-       
+
         <div class="btn-group">
             <button class="btn">Left</button>
             <button class="btn">Middle</button>
