--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <!--섹션 1 메뉴 바 -->
     <nav class="navbar">
         <ul class="navbar__menu">
             <li><a href="">입학 환영사</a></li>
@@ -21,6 +27,8 @@
             <li><a href="">서비스 바로가기</a></li>
         </ul>
     </nav>
+
+    <!--섹션 2 입학 환영 비디오-->
     <div id='welcome'>
         입학을 환영합니다.
         <div class="row-fluid">
@@ -36,13 +44,7 @@
         </div>
     </div>
 
-    <!-- <div class="video_content">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div> -->
-    </div>
-    <div>공지사항</div>
-    <div>입학 환영사 , 학사가이드, 슬기로운 제주 생활, 캠퍼스 안내, 서비스 바로가기</div>
-    <div>동영상1</div>
+    <!--섹션3 공지사항 글-->
     <div>
         <div class="row-fluid">
             <div class="span4 notice">공지사항</div>
@@ -56,18 +58,107 @@
             <div class="span4"></div>
         </div>
     </div>
+    <!--섹션4 학사가이드 동영상 및 링크-->
     <div>
         <div class="row-fluid">
-            <div class="span4">동영상</div>
-            <div class="span4">동영상</div>
-            <div class="span4">동영상</div>
+            <div class="span4">
+                <ul class="thumbnails">
+                    <div class="thumbnail">
+                        <div class=" video_content">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <h3>학사 운영 계획
+                        </h3>
+                        <p>교무처장 인터뷰</p>
+                    </div>
+                </ul>
+            </div>
+            <div class="span4">
+                <ul class="thumbnails">
+                    <div class="thumbnail">
+                        <div class=" video_content">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <h3>대학생활 안내
+                        </h3>
+                        <p>입학학생처장 인터뷰</p>
+                    </div>
+                </ul>
+            </div>
+            <div class="span4">
+                <ul class="thumbnails">
+                    <div class="thumbnail">
+                        <div class=" video_content">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <h3>비교과 교육과정
+
+                        </h3>
+                        <p>교육혁신원장 인터뷰</p>
+                    </div>
+                </ul>
+            </div>
         </div>
+        <br>
         <div class="row-fluid">
-            <div class="span4">링크</div>
-            <div class="span4">링크</div>
-            <div class="span4">링크</div>
+            <div class="span4">
+                <ul class="thumbnails">
+                    <div class="thumbnail">
+                        <div class=" video_content">
+
+                        </div>
+                        <h3>학사 운영 계획
+                        </h3>
+                        <p>교무처장 인터뷰</p>
+                    </div>
+                </ul>
+            </div>
+            <div class="span4">
+                <ul class="thumbnails">
+                    <div class="thumbnail">
+                        <div class=" video_content">
+
+                        </div>
+                        <h3>대학생활 안내
+                        </h3>
+                        <p>입학학생처장 인터뷰</p>
+                    </div>
+                </ul>
+            </div>
+            <div class="span4">
+                <ul class="thumbnails">
+                    <div class="thumbnail">
+                        <div class=" video_content">
+
+                        </div>
+                        <h3>비교과 교육과정
+
+                        </h3>
+                        <p>교육혁신원장 인터뷰</p>
+                    </div>
+                </ul>
+            </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
     <div>슬기로운 서원생활<br>서원대 캠퍼스 생활을 더욱 알차게!
         <div class="row-fluid">
             <div class="span4">
