--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -150,15 +150,7 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
+    <!--섹션5 슬기로운 제주 생활-->
     <div>슬기로운 서원생활<br>서원대 캠퍼스 생활을 더욱 알차게!
         <div class="row-fluid">
             <div class="span4">
@@ -202,12 +194,27 @@
             </div>
         </div>
     </div>
+    
+    <!--섹션6 캠퍼스 안내-->
     <div>
         <div class="row-fluid">
-            <div class="span6">동영상</div>
-            <div class="span6">동영상</div>
+            <div class="span6">
+                <div class=" video_content">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="span6">
+                <div class=" video_content">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </div>
+    <!--섹션7 온라인 이벤트-->
     <div>
         신학기 온라인 이벤트<br>
         자세한 내용은 우리대학 페이스북에서 확인하세요!
@@ -223,6 +230,7 @@
             <div class="span4"></div>
         </div>
     </div>
+    <!--섹션8 서비스 바로가기-->
     <div id="lastSection">
         <div class="links">
             <li><a href="">제주대학교</a></li>
