--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- 1,2,6 -leo   3,4,5 -reo -->
 <head>
     <title>Bootstrap 101 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
