--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -17,7 +17,6 @@
     <div id='welcome'>
         <nav class="navbar">
             <div class="navbar__logo"></div>
-    
             <ul class="navbar__menu">
                 <li><a href="#">입학 환영사</a></li>
                 <li><a href="#">학사 가이드</a></li>
@@ -25,22 +24,15 @@
                 <li><a href="#">캠퍼스 안내</a></li>
                 <li><a href="#">서비스 바로가기</a></li>
             </ul>
-            
             <a href="#" class="navbar__togglebutton">
                 <i class="fas fa-bars"></i>
             </a>
         </nav>
-        입학을 환영합니다.
-        <div class="row-fluid">
-            <div class="span4"></div>
-            <div class="span4">
-                <div class=" video_content">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="span4"></div>
+        <div>입학을 환영합니다.</div>
+        <div class=" video_content">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </div>
 
