--- a/서원대학교 신입생 오리엔테이션.htm
+++ b/서원대학교 신입생 오리엔테이션.htm
@@ -44,6 +44,7 @@
 			<div class="nMov">
 
 			<div class="video-container">
+				<span>입학을 환영합니다.</span>
 				 <iframe src="./서원대학교 신입생 오리엔테이션_files/8ZQ1JY9-NGk.html" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 			</div>
 				<!--<img src="images/mov-btn.jpg" alt="">-->
