--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -12,17 +12,16 @@
 </head>
 
 <body>
-    <!--섹션 1 메뉴 바 -->
-    <!--섹션 2 입학 환영 비디오-->
+    <!--섹션 1 메뉴 바 및 입학 환영사 -->
     <div id='welcome'>
         <nav class="navbar">
             <div class="navbar__logo"></div>
             <ul class="navbar__menu">
-                <li><a href="#">입학 환영사</a></li>
-                <li><a href="#">학사 가이드</a></li>
-                <li><a href="#">슬기로운 제주생활</a></li>
-                <li><a href="#">캠퍼스 안내</a></li>
-                <li><a href="#">서비스 바로가기</a></li>
+                <li><a href="#welcome">입학 환영사</a></li>
+                <li><a href="#sec2">학사 가이드</a></li>
+                <li><a href="#sec3">슬기로운 제주생활</a></li>
+                <li><a href="#sec4">캠퍼스 안내</a></li>
+                <li><a href="#lastSection">서비스 바로가기</a></li>
             </ul>
             <a href="#" class="navbar__togglebutton">
                 <i class="fas fa-bars"></i>
@@ -45,8 +44,8 @@
     <br>
     <br>
 
-    <!--섹션3 학사가이드 동영상 및 링크-->
-    <div> 학사가이드
+    <!--섹션2 학사가이드 동영상 및 링크-->
+    <div id='sec2'> 학사가이드
         <div class="row-fluid">
             <div class="span4">
                 <ul class="thumbnails">
@@ -105,23 +104,23 @@
     <br>
     <br>
 
-    <!--섹션4 슬기로운 제주 생활-->
-    <div>슬기로운 서원생활<br>서원대 캠퍼스 생활을 더욱 알차게!
+    <!--섹션3 슬기로운 제주 생활-->
+    <div id="sec3">슬기로운 제주생활<br>제주 캠퍼스 생활을 더욱 알차게!
         <div class="row-fluid">
             <div class="span4">
-                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                <a href="library.html"
                     target="blank">
                     <img src="img/limg-life1.jpg" class="img-rounded">
                 </a>
             </div>
             <div class="span4">
-                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                <a href="library.html"
                     target="blank">
                     <img src="img/limg-life1.jpg" class="img-rounded">
                 </a>
             </div>
             <div class="span4">
-                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                <a href="library.html"
                     target="blank">
                     <img src="img/limg-life1.jpg" class="img-rounded">
                 </a>
@@ -130,19 +129,19 @@
         <br>
         <div class="row-fluid">
             <div class="span4">
-                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                <a href="library.html"
                     target="blank">
                     <img src="img/limg-life1.jpg" class="img-rounded">
                 </a>
             </div>
             <div class="span4">
-                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                <a href="library.html"
                     target="blank">
                     <img src="img/limg-life1.jpg" class="img-rounded">
                 </a>
             </div>
             <div class="span4">
-                <a href="https://ko-kr.facebook.com/pages/category/College---University/%EC%A0%9C%EC%A3%BC%EB%8C%80%ED%95%99%EA%B5%90-1536145756655629/"
+                <a href="library.html"
                     target="blank">
                     <img src="img/limg-life1.jpg" class="img-rounded">
                 </a>
@@ -159,8 +158,8 @@
     <br>
     
     
-    <!--섹션5 온라인 이벤트-->
-    <div>
+    <!--섹션4 온라인 이벤트-->
+    <div id='sec4'>
         신학기 온라인 이벤트<br>
         자세한 내용은 우리대학 페이스북에서 확인하세요!
 
@@ -176,7 +175,7 @@
         </div>
     </div>
 
-    <!--섹션6 서비스 바로가기-->
+    <!--섹션5 서비스 바로가기-->
     <div id="lastSection">
         <div class="links">
             <li><a href="">제주대학교</a></li>
