--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -29,9 +29,7 @@
         </nav>
         <div>입학을 환영합니다.</div>
         <div class=" video_content">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
@@ -51,10 +49,7 @@
                 <ul class="thumbnails">
                     <div class="thumbnail">
                         <div class=" video_content">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <h3>학사 운영 계획
                         </h3>
@@ -66,10 +61,7 @@
                 <ul class="thumbnails">
                     <div class="thumbnail">
                         <div class=" video_content">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <h3>대학생활 안내
                         </h3>
@@ -81,10 +73,7 @@
                 <ul class="thumbnails">
                     <div class="thumbnail">
                         <div class=" video_content">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zwEv_FwXp2Q"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <h3>비교과 교육과정
 
