--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -116,7 +116,7 @@
             </div>
         </div>
         <br>
-        <div class="row-fluid">
+        <!-- <div class="row-fluid">
             <div class="span4">
                 <a href="library.html"
                     target="blank">
@@ -135,7 +135,7 @@
                     <img src="img/limg-life1.jpg" class="img-rounded">
                 </a>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <br>
