--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -167,7 +167,7 @@
     <!--섹션5 서비스 바로가기-->
     <div id="lastSection">
         <div class="links">
-            <li><a href="">제주대학교</a></li>
+            <li><a href="http://www.jejunu.ac.kr/main">제주대학교</a></li>
             <li><a href="">e-campus</a></li>
             <li><a href="">학사행정서비스</a></li>
             <li><a href="">도서관</a></li>
