--- a/freshman/index.html
+++ b/freshman/index.html
@@ -28,7 +28,7 @@
                 <i class="fas fa-bars"></i>
             </a>
         </nav>
-        <div>입학을 환영합니다.</div>
+        <h1 class="desc">입학을 환영합니다.</h1>
 
         <div class=" video_content">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI" frameborder="0"
@@ -40,7 +40,7 @@
 
     <!--섹션2 학사가이드 동영상 및 링크-->
     <div id='sec2'>
-        <h1 class='desc sec2'>학사가이드</h1>
+        <h1 class='desc'>학사가이드</h1>
         <div class="row-fluid">
             <div class="span3">
                 <ul class="thumbnails">
