--- a/freshman/index.html
+++ b/freshman/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>제주대학교 신입생 오리엔테이션</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Bootstrap -->
     <script src="https://kit.fontawesome.com/fd06401b6a.js" crossorigin="anonymous"></script>
     <script src="./js/menubar.js" defer></script>
@@ -41,6 +41,9 @@
     <!--섹션2 학사가이드 동영상 및 링크-->
     <div id='sec2'>
         <h1 class='desc'>학사가이드</h1>
+        <br>
+        <br>
+        <br>
         <div class="row-fluid">
             <div class="span3">
                 <ul class="thumbnails">
