--- a/freshman/index.html
+++ b/freshman/index.html
@@ -11,11 +11,16 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/style.css" rel="stylesheet" media="screen">
 </head>
-
 <body>
+    <!-- br태그지우소 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
     <!--섹션 1 메뉴 바 및 입학 환영사 -->
     <div id='welcome'>
-        <nav class="navbar">
+        <!-- <nav class="navbar">
             <div class="navbar__logo"></div>
             <ul class="navbar__menu">
                 <li><a href="#welcome">입학환영사</a></li>
@@ -27,7 +32,22 @@
             <a href="#" class="navbar__togglebutton">
                 <i class="fas fa-bars"></i>
             </a>
-        </nav>
+        </nav> -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <h1 class="desc">입학을 환영합니다.</h1>
 
         <div class=" video_content">
@@ -48,12 +68,13 @@
             <div class="span3">
                 <ul class="thumbnails">
                     <div class="thumbnail">
-                        <div class=" video_content">
+                        <!-- <div class=" video_content">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
-                        </div>
+                        </div> -->
+                        <img src="./img/sec2-1.png" alt="">
                     </div>
 
                 </ul>
@@ -61,36 +82,39 @@
             <div class="span3">
                 <ul class="thumbnails">
                     <div class="thumbnail">
-                        <div class=" video_content">
+                        <!-- <div class=" video_content">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
-                        </div>
+                        </div> -->
+                        <img src="./img/sec2-2.png" alt="">
                     </div>
                 </ul>
             </div>
             <div class="span3">
                 <ul class="thumbnails">
                     <div class="thumbnail">
-                        <div class=" video_content">
+                        <!-- <div class=" video_content">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
-                        </div>
+                        </div> -->
+                        <img src="./img/sec2-3.png" alt="">
                     </div>
                 </ul>
             </div>
             <div class="span3">
                 <ul class="thumbnails">
                     <div class="thumbnail">
-                        <div class=" video_content">
+                        <img src="./img/sec2-4.png" alt="">
+                        <!-- <div class=" video_content">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/eoQCsBp6vLI"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
-                        </div>
+                        </div> -->
                     </div>
                 </ul>
             </div>
@@ -188,6 +212,7 @@
             <div class="span4"></div>
         </div>
     </div>
+    
 
     <!--섹션5 서비스 바로가기-->
     <div id="lastSection">
