--- a/freshman/index.html
+++ b/freshman/index.html
@@ -12,12 +12,12 @@
     <link href="css/style.css" rel="stylesheet" media="screen">
 </head>
 <body>
-    <!-- br태그지우소 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
-    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
-    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
-    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
-    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
-    <!-- br태그하고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그지우고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그지우고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그지우고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그지우고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그지우고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
+    <!-- br태그지우고 nav바만 주석풀면됨 !!!!!!!!!!!!!!!!!!!!! 모바일에서 깨져서 일단 해논거임 느낌만 보려고 -->
     <!--섹션 1 메뉴 바 및 입학 환영사 -->
     <div id='welcome'>
         <!-- <nav class="navbar">
